# SubPlz

./: .dockerignore  .gitignore  .python-version  Dockerfile  LICENSE  README.md  alass  align-vtt-v2.py  align.py  align_vtt_v2.py  anki-importer.py  anki.sh  combine.sh  combine_hypervisor.ps1  combine_hypervisor.sh  compose.yml  gen.py  mapping.template.json  merge.py  merge.sh  merge2.sh  pylintrc  pyproject.toml  readme.md  readme.txt  requirements.txt  run.py  run.sh  split-sentences.py  split.sh  split_run.py  split_run.sh  split_sentences.py  sub.py  utils.py  vtt_utils.py
AudiobookTextSyncCache/: 1.mkv.-1.tiny.subs  変な家.m4b.0.tiny.subs  変な家.m4b.1.tiny.subs  変な家.m4b.2.tiny.subs  変な家.m4b.3.tiny.subs  変な家.m4b.4.tiny.subs
anki/: anki-csv-importer.py  anki-importer.py  anki.sh  mapping.template.json  readme.md  requirements.txt
anki_importer/: anki-importer.py  anki.sh
ats/: __init__.py  align.py  anki-importer.py  audio.py  forced_alignment_tutorial.py  huggingface.py  main.py  quantization.py
auto/: config.py  config.template.yml  consumer.py  readme.md  scanner.py  watcher.py
cicd/: build.sh  deploy.sh  release.sh
deprecated/: align-v1.py  align.py  readme.md  run.py  utils.py
helpers/: alassfi.bash  anki.sh  bazarr.bash  cron-extract-eng-to-ptsrt.bash  merge.sh  merge2.sh  run.sh  rund.sh  runi.sh  split.sh  stable-sonarr-cpu.bash  stable-sonarr.bash  subplz.bash  subplz.sh  test.sh
src/: Untitled.ipynb  abts_wrapper.py  align.py  audio.py  cache.py  cli.py  decoding.py  decoding2.py  file.py  huggingface.py  lang.py  main.py  main2.py  main3.py  mapping.template.json  model.py  sync.py  text.py  transcribe.py  utils.py
subplz/: __init__.py  __main__.py  abts_wrapper.py  alass.py  align.py  audio.py  batch.py  cache.py  cli.py  config.py  files.py  gen.py  helpers.py  lang.py  logger.py  loggers.py  models.py  run.py  sub.py  sub.template.json  sync.py  test_align.py  text.py  transcribe.py  utils.py  watcher.py
subplz/alass/: __init__.py  alass.py
subplz/auto/: readme.md  scanner.py  watcher.py  webhook_receiver.py
web/: webhook_receiver.py
