[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "AudiobookTextSync"
version = "1.0.0"
description = "Syncs text to audio"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

# Optional metadata
authors = [{name = "ym1234"}, {name = "KanjiEater", email = "kanjieat3r@gmail.com"}]
keywords = ["whisper", "subtitles", "align", "generate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "beautifulsoup4 ~= 4.12.0",
    "biopython ~= 1.83",
    "EbookLib ~= 0.18",
    "faster_whisper ~= 1.0.1",
    "ffmpeg_python ~= 0.2.0",
    "rapidfuzz ~= 3.8.1",
    "numpy ~= 1.24.3",
    "openai_whisper == 20231117",
    "regex ~= 2023.12.25",
    "tqdm ~= 4.66.3",
    "wcwidth >= 0.2.13",
    "pycountry",
    "torchaudio",
    "alass"
]

[project.scripts]
"ats" = "scripts:src"
