[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "subplz"
version = "2.0.0"
description = "Generate accurate subtitles from audio, align existing subs to videos, generate your own Kindle's Immersion Reading like audiobook subs 📖🎧"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}

# Optional metadata
authors = [{name = "KanjiEater", email = "kanjieat3r@gmail.com"}]
keywords = ["whisper", "subtitles", "align", "generate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "beautifulsoup4 ~= 4.12.0",
    "biopython ~= 1.83",
    "EbookLib ~= 0.18",
    "faster_whisper ~= 1.0.1",
    "ffmpeg_python ~= 0.2.0",
    "rapidfuzz ~= 3.8.1",
    "numpy ~= 1.24.3",
    "regex ~= 2023.12.25",
    "wcwidth >= 0.2.13",
    "natsort == 8.4.0",
    "tqdm ~= 4.66.4",
    "pysbd ~= 0.3.4",
    "stable-ts ~= 2.19.0",
    "ctranslate2==4.4.0",

    # "ats @ file:///home/ke/code/AudiobookTextSync",
]


[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]    # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.package-data]
"*" = ["alass-linux64"]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "ruff==0.4.4",
  "pytest==8.3.2"
]
anki = [
  "requests==2.26.0",
  "subs2cia@git+https://github.com/kanjieater/subs2cia#egg=de536d1c983641cd590180aa93c080010b1c5665"
]

[project.scripts]
subplz = "subplz.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true
